# holiday_planner

./: .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  docker_entrypoint.sh  manage.py  mypy.ini  pyproject.toml  pytest.ini  thoughts.md
holiday_planner/: asgi.py  settings.py  settings_docker.py  settings_test.py  urls.py  wsgi.py
planner_api/: admin.py  models.py  serializers.py  urls.py  views.py  weather_service.py
planner_api/migrations/: 0001_initial.py  0002_trip_tripstop.py
planner_api/scripts/: populate.py
planner_api/tests/: test_models.py  test_serializers.py  test_views.py  test_weather_api.py  test_weather_service.py
tests/docker/: docker-compose.yml  test_dockerfile.py
