[project]
name = "holiday-planner"
version = "0.1.0"
description = ""
authors = [
    {name = "Florian Boucault",email = "florian@boucault.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "openmeteo-requests (>=1.3.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.10.0"
pytest-mypy = "^0.10.3"
django-stubs = "^5.1.3"
djangorestframework-stubs = "^3.15.3"
pytest-cov = "^6.0.0"
